--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,7 +206,7 @@
 
     <!-- screen titles -->
     <string name="title_history">History</string>
-    <string name="title_buy_requests">Buy offers</string>
+    <string name="title_buy_requests">Buy requests</string>
     <string name="title_scan">Scan</string>
     <string name="title_offers">Offers</string>
     <string name="title_notifications">Notifications</string>
