1. Changed input type for user address 2. Added forgot password api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
 
     <!-- input error messages -->
     <string name="error_email_req">Email Address is required</string>
-    <string name="error_email_notvalid">Please enter valid phoneNumber address</string>
+    <string name="error_email_notvalid">Please enter valid email address</string>
     <string name="error_password_req">Password is required</string>
     <string name="error_re_enter_password_req">Password is required</string>
     <string name="error_re_enter_password_does_not_match">Re-entered Password does not match</string>
@@ -148,13 +148,15 @@
     <string name="dialog_logout">Are you sure you want to logout?</string>
 
 
-    <!-- Login -->
+    <!-- Forgot password -->
     <string name="login_username_hint">Email address</string>
     <string name="login_password_hint">Password</string>
     <string name="login_forgotpassword_title">Forgot Password?</string>
-    <string name="login_password_confirm_msg">You will receive an phoneNumber with a temporary password.</string>
-    <string name="login_forgotpassword_enter_emailid">Enter your phoneNumber address and we will send you a one-time password to use in resetting it.</string>
-    <string name="forgot_password_emailid_hint">Email address</string>
+    <string name="login_password_confirm_msg">You will receive an OTP with a temporary password
+        .</string>
+    <string name="login_forgotpassword_enter_phone_number">Enter your phoneNumber and we will send
+        you a one-time password to use in resetting it.</string>
+    <string name="forgot_password_phone_number_hint">Registered Phone number</string>
 
     <!-- change password -->
     <string name="changepassword_title">Change Password</string>
