--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="error_firstname_req">First Name is required</string>
     <string name="error_lastname_req">Last Name is required</string>
     <string name="error_phone_req">Phone is required</string>
-    <string name="error_phone_type_req">Phone type is required</string>
+    <string name="error_category_req">Store category is required</string>
     <string name="error_phone_min_digits">Phone number should be at least 10 digits</string>
     <string name="error_one_phone_req">Please enter a contact number</string>
     <string name="error_timezone_req">Time Zone is required</string>
@@ -97,8 +97,8 @@
     <string name="error_tools_answer_req">Please select atleast one</string>
     <string name="error_currentpwd_req">Current Password is required</string>
     <string name="error_new_emailid_req">New EmailId is required</string>
-    <string name="error_hospital_req">Hospital is required</string>
     <string name="error_address_req">Address is required</string>
+    <string name="error_gstn_req">GSTN is required</string>
     <string name="error_new_confirm_pwd_not_matched">Password mismatch</string>
     <string name="error_city_req">City is required</string>
     <string name="error_postal_code_req">PostalCode is required</string>
@@ -168,6 +168,8 @@
     <!-- Registration -->
     <string name="register_userinfo_title">User Information</string>
     <string name="register_userinfo_subtitle">Please enter information for the person who will be using the app.</string>
+    <string name="register_store_info_title">Store Information</string>
+    <string name="register_store_info_subtitle">Please enter store information</string>
     <string name="register_name_hint">Name</string>
     <string name="register_firstname_hint">First Name</string>
     <string name="register_lastname_hint">Last Name</string>
@@ -183,6 +185,9 @@
     <string name="register_zipcode_hint">Zip Code</string>
     <string name="register_dateofbirth_hint">Date of Birth</string>
     <string name="register_gender_hint">Gender</string>
+    <string name="register_category_hint">Category</string>
+    <string name="register_gstn_hint">GSTN</string>
+    <string name="register_address_hint">Address</string>
     <string name="register_address1_hint">Address1</string>
     <string name="register_address2_hint">Address2</string>
     <string name="register_street_hint">Street</string>
