--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,7 @@
     <string name="error_currentpwd_req">Current Password is required</string>
     <string name="error_new_emailid_req">New EmailId is required</string>
     <string name="error_address_req">Address is required</string>
+    <string name="error_image_path_req">Select image to view</string>
     <string name="error_gstn_req">GSTN is required</string>
     <string name="error_new_confirm_pwd_not_matched">Password mismatch</string>
     <string name="error_city_req">City is required</string>
