--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,6 +123,7 @@
     <string name="error_postal_code_req">PostalCode is required</string>
 
     <!-- progress messages -->
+    <string name="progress_purchased_history">Lodding Purchased History...</string>
     <string name="progress_defaults">Fetching details...</string>
     <string name="progress_location">Loading location details...</string>
     <string name="progress_login">Logging in...</string>
@@ -259,6 +260,12 @@
     <string name="buy_request_brand">Brand</string>
     <string name="buy_request_product_image">Product Image</string>
     <string name="buy_request_product_info">Product Info</string>
+
+    <!--Purchased Screen-->
+    <string name="purchased_brand">Brand</string>
+    <string name="purchased_product_image">Product Image</string>
+    <string name="purchased_product_info">Product Info</string>
+
 
     <!--add offers-->
     <string name="add_offer_brand">Brand</string>
