1. Implemneted Api for fetching user details using scan and phone number
Merge branch 'ramu' of https://bitbucket.org/shivakoka/connect-incon into shiva

# Conflicts:
#	app/src/main/res/layout/fragment_scan_tab.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,7 +124,8 @@
     <string name="error_postal_code_req">PostalCode is required</string>
 
     <!-- progress messages -->
-    <string name="progress_purchased_history">Lodding Purchased History...</string>
+    <string name="progress_purchased_history">Loading Purchased History...</string>
+    <string name="progress_user_details">Fetching user details...</string>
     <string name="progress_defaults">Fetching details...</string>
     <string name="progress_location">Loading location details...</string>
     <string name="progress_login">Logging in...</string>
