--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,6 +126,8 @@
     <!-- progress messages -->
     <string name="progress_purchased_history">Loading Purchased History...</string>
     <string name="progress_user_details">Fetching user details...</string>
+    <string name="progress_add_new_model">Adding new model...</string>
+    <string name="progress_product_details">Fetching product details...</string>
     <string name="progress_defaults">Fetching details...</string>
     <string name="progress_location">Loading location details...</string>
     <string name="progress_login">Logging in...</string>
