1. Renamed addofferresponce to addofferrequest 2.Add date and gender implemantion 3.Added some Strings
Merge branch 'shiva' of https://bitbucket.org/shivakoka/connect-incon into ramu

# Conflicts:
#	app/src/main/java/com/incon/connect/ui/scan/ScanTabFragment.java
#	app/src/main/res/values/strings.xml

implemeted api cals on Interstfragment,returnfragment,buyrequestfragment(not completed), and arranged settings in orderly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,7 +136,10 @@
     <string name="progress_addoffer_merchant_fragment">Lodding AddOffer Merchant Fragment..
         .</string>
     <string name="progress_purchased_history">Lodding Purchased History...</string>
-    <string name="progress_user_details">Fetching user details...</string>
+    <string name="progress_interest_history">Lodding Interest History...</string>
+    <string name="progress_return_history">Lodding Return History...</string>
+    <string name="progress_buy_request">Lodding Buy Request...</string>
+    <string name="progress_user_details">Fetching User Details...</string>
     <string name="progress_warranty_registering">Registering warranty...</string>
     <string name="progress_add_new_model">Adding new model...</string>
     <string name="progress_product_details">Fetching product details...</string>
@@ -263,14 +266,15 @@
 
     <!--Settings -->
     <string name="title_menu_change_password">Change Password</string>
-    <string name="title_menu_logout">Logout</string>
     <string name="title_menu_profile">Profile</string>
     <string name="title_menu_store_settings">Store Settings</string>
     <string name="title_menu_bill_format">Bill Format</string>
     <string name="title_menu_store_location_on_map">Store Location On Map</string>
     <string name="title_menu_contact_details">Contact Details</string>
-    <string name="title_menu_timeings">Timeings</string>
+    <string name="title_menu_timings">Timings</string>
     <string name="title_menu_account_settings">Account Settings</string>
+    <string name="title_menu_logout">Logout</string>
+
 
     <!--Buy Request Screen-->
     <string name="buy_request_brand">Brand</string>
