--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,6 +139,7 @@
     <string name="progress_interest_history">Lodding Interest History...</string>
     <string name="progress_return_history">Lodding Return History...</string>
     <string name="progress_buy_request">Lodding Buy Request...</string>
+    <string name="progress_add_offer_merchant">Lodding Add Offer Merchant...</string>
     <string name="progress_user_details">Fetching User Details...</string>
     <string name="progress_warranty_registering">Registering warranty...</string>
     <string name="progress_add_new_model">Adding new model...</string>
