1. Implemented add new model api 2. Fixed crash while empty phone number 3.added  list_item_selecter and changes on bottom sheet on purchased fragment 4 added invoice field on warrenty registation fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -224,6 +224,7 @@
     <string name="add_new__serial_no">Serial No</string>
     <string name="add_new__category">Category</string>
     <string name="add_new__division">Division</string>
+    <string name="add_new__invoiceNumber">InvoiceNumber</string>
     <string name="add_new__type">Type</string>
 
     <!-- Registration -->
