--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,9 @@
 
     <!-- api error messages -->
     <string name="error_network">Api failed due to NetworkErrorException</string>
-    <string name="error_message">Please Add New MOdel When Click On Below Button </string>
+    <string name="error_model_message">No models found, Please Add New Model by clicking on
+        the below Button
+    </string>
     <string name="error_socket">Unable to process your request. Please try again</string>
     <string name="error_no_connectivity">Looks like you are offline, please check internet
         connectivity</string>
