--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,12 +27,16 @@
     <string name="dialog_warranty_registered_successfully">Warranty has been registered
         successfully</string>
 
+    <!--product Assign-->
+    <string name="title_assigned_successfully">Assigned SuccessFully</string>
     <!--home_scanning activity-->
     <string name="action_enter_customer_phone_number">Enter customer phone number</string>
     <string name="action_or">OR</string>
     <string name="action_scanuid">Scan Customer UID</string>
     <string name="action_entermobilenumber">Enter Mobile Number</string>
     <string name="title_user_qr_code">Place user qr code to scan</string>
+    <string name="title_warranty_serial_barcode">Place user  Serial no Barcode</string>
+    <string name="title_warranty_batch_barcode">Place user Batch no Barcode</string>
 
        <!-- add offer -->
     <string name="add_an_offer_brand_hint">Brand</string>
