--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,6 +148,11 @@
     <string name="error_new_confirm_pwd_not_matched">Password mismatch</string>
     <string name="error_city_req">City is required</string>
     <string name="error_postal_code_req">PostalCode is required</string>
+    <string name="error_product_model">Model is required</string>
+    <string name="error_product_price">Price is required</string>
+    <string name="error_product_serial">Serial is required</string>
+    <string name="error_product_batch">Batch is required</string>
+    <string name="error_product_invoice_number">InvoiceNumber is required</string>
 
     <!-- progress messages -->
     <string name="progress_addoffer_merchant_fragment">Loading AddOffer Merchant Fragment..
