--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="action_manual_entry">Manual Enter</string>
     <string name="dialog_warranty_registered_successfully">Warranty has been registered
         successfully</string>
+    <string name="action_product_status">Is product delivered</string>
+    <string name="action_description">Description</string>
 
     <!--product Assign-->
     <string name="title_assigned_successfully">Assigned SuccessFully</string>
@@ -237,6 +239,7 @@
     <string name="add_new__division">Division</string>
     <string name="add_new__invoiceNumber">InvoiceNumber</string>
     <string name="add_new__type">Type</string>
+    <string name="add_new_notes">Notes</string>
 
     <!-- Registration -->
     <string name="register_userinfo_title">User Information</string>
