--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -295,6 +295,7 @@
     <string name="tab_purchased">Purchased</string>
     <string name="tab_interest">Interest</string>
     <string name="tab_return">Return</string>
+    <string name="hint_warranty_date">Warranty ends on \n %1$s</string>
 
     <!--Settings -->
     <string name="title_menu_change_password">Change Password</string>
