--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <!--product Assign-->
     <string name="title_assigned_successfully">Assigned SuccessFully</string>
     <!--home_scanning activity-->
-    <string name="action_enter_customer_phone_number">Enter customer phone number</string>
+    <string name="action_enter_customer_phone_number">Phone number</string>
     <string name="action_or">OR</string>
     <string name="action_scanuid">Scan Customer UID</string>
     <string name="action_entermobilenumber">Enter Mobile Number</string>
